--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,3 @@
-<!--
-
-=========================================================
-* Paper Dashboard Angular - v2.2.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/paper-dashboard-angular
-* Copyright 2019 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/paper-dashboard-angular/blob/master/LICENSE.md)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
--->
-
 <!doctype html>
 <html>
   <head>
@@ -33,7 +15,7 @@
       <!--  CSS for Demo Purpose, don't include it in your project     -->
       <link href="./assets/css/demo.css" rel="stylesheet" />
 
-      <!--     Fonts and icons     -->
+      <!--     Fonts and logs     -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
